--- a/index.html
+++ b/index.html
@@ -89,5 +89,21 @@
         </p>
       </div>
     </section>
+    <section class="director">
+      <div class="dricetor-box-1">
+        <img src="images/director.jfif" alt="" />
+      </div>
+      <div class="dricetor-box-2">
+        <h1>Sam Raimi</h1>
+        <p class="dir-p-txt">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi
+          deleniti quo, veniam, esse adipisci nam dolor facere nisi rem
+          asperiores dolore incidunt nihil sint vitae commodi dicta quas sed
+          possimus inventore atque beatae qui at, rerum facilis? Delectus
+          perspiciatis, modi impedit quibusdam veritatis repellat assumenda
+          itaque soluta eos cupiditate? Aperiam.
+        </p>
+      </div>
+    </section>
   </body>
 </html>
