--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         </p>
       </div>
     </section>
+    <div class="heading-txt">Director</div>
     <section class="director">
       <div class="dricetor-box-1">
         <img src="images/director.jfif" alt="" />
@@ -105,5 +106,8 @@
         </p>
       </div>
     </section>
+    <footer id="style-border">
+      <p>© Shafin Shanto 2021, a Programming Hero initiative.</p>
+    </footer>
   </body>
 </html>
